--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,35 @@
   color: red;
 }
 
+.Header {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  border-bottom: 2px solid black;
+}
+
+.Aside {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+}
+
+.Result {
+  width: 100%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -11,5 +40,16 @@
 
 .App {
   text-align: center;
+  background-image: url("../img/sky-699697_1280.jpg");
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 70% 30%;
+      grid-template-columns: 70% 30%;
+  -ms-grid-rows: 20vh 1fr 1fr;
+      grid-template-rows: 20vh 1fr 1fr;
 }
 /*# sourceMappingURL=App.css.map */
