--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,3 @@
-.Search {
-  color: red;
-}
-
 .Header {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
@@ -10,6 +6,15 @@
   -ms-grid-column-span: 2;
   grid-column: 1/3;
   border-bottom: 2px solid black;
+}
+
+.Header-input {
+  font-size: 2rem;
+  padding: 0.5rem;
+  margin: 2rem;
+  text-align: center;
+  border-radius: 15px;
+  border-style: hidden;
 }
 
 .Aside {
@@ -40,7 +45,6 @@
 
 .App {
   text-align: center;
-  background-image: url("../img/sky-699697_1280.jpg");
   background-size: cover;
   height: 100vh;
   width: 100vw;
