--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,3 @@
-@import "search";
 @import "_header";
 @import "_aside";
 @import "_result";
@@ -11,7 +10,7 @@
 
 .App {
   text-align: center;
-  background-image: url("../img/sky-699697_1280.jpg");
+  // background-image: url("../img/sky-699697_1280.jpg");
   background-size: cover;
   height: 100vh;
   width: 100vw;
