--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,3 +3,12 @@
   grid-column: 1/3;
   border-bottom: 2px solid black;
 }
+
+.Header-input {
+  font-size: 2rem;
+  padding: 0.5rem;
+  margin: 2rem;
+  text-align: center;
+  border-radius: 15px;
+  border-style: hidden;
+}
