--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,19 @@
 .Header {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
+  -ms-flex-preferred-size: 30vh;
+      flex-basis: 30vh;
   border-bottom: 2px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .Header-input {
@@ -17,23 +25,33 @@
   border-style: hidden;
 }
 
-.Aside {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 2;
-  grid-row: 2/4;
+.temp {
+  font-size: 2rem;
+}
+
+.time {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
+}
+
+.main {
+  font-size: 3rem;
 }
 
 .Result {
-  width: 100%;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 2;
-  grid-row: 2/4;
+  font-family: "Montserrat", sans-serif;
+  display: inline;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  padding: 3rem;
+  margin: 0 auto;
+  letter-spacing: 0.5rem;
+}
+
+.result-text {
+  margin: 1rem;
+  font-size: 1.6rem;
 }
 
 * {
@@ -46,14 +64,17 @@
 .App {
   text-align: center;
   background-size: cover;
+  min-width: 100%;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 70% 30%;
-      grid-template-columns: 70% 30%;
-  -ms-grid-rows: 20vh 1fr 1fr;
-      grid-template-rows: 20vh 1fr 1fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Montserrat", sans-serif;
 }
 /*# sourceMappingURL=App.css.map */
