--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,4 @@
 @import "_header";
-@import "_aside";
 @import "_result";
 
 * {
@@ -10,12 +9,13 @@
 
 .App {
   text-align: center;
-  // background-image: url("../img/sky-699697_1280.jpg");
   background-size: cover;
+  min-width: 100%;
+
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  display: grid;
-  grid-template-columns: 70% 30%;
-  grid-template-rows: 20vh 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
 }
