--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,10 @@
 .Header {
-  grid-row: 1/2;
-  grid-column: 1/3;
+  flex-basis: 30vh;
   border-bottom: 2px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .Header-input {
@@ -11,4 +14,14 @@
   text-align: center;
   border-radius: 15px;
   border-style: hidden;
+}
+
+.temp {
+  font-size: 2rem;
+}
+
+.time {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
 }
