--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 .Header {
-  -ms-flex-preferred-size: 30vh;
-      flex-basis: 30vh;
+  -ms-flex-preferred-size: 20vh;
+      flex-basis: 20vh;
   border-bottom: 2px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -54,6 +54,48 @@
   font-size: 1.6rem;
 }
 
+.Longterm {
+  position: absolute;
+  bottom: 200px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: 50px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[10];
+      grid-template-columns: repeat(10, 1fr);
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  row-gap: 1rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.one {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: white;
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
+.img {
+  height: 100px;
+  width: 100px;
+}
+
+.hours {
+  background-color: white;
+  border: 2px solid black;
+  padding: 1rem;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -65,9 +107,9 @@
   text-align: center;
   background-size: cover;
   min-width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
