--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,6 @@
 @import "_header";
 @import "_result";
+@import "longterm";
 
 * {
   margin: 0;
@@ -12,9 +13,9 @@
   background-size: cover;
   min-width: 100%;
 
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
