--- a/src/styles/_longterm.scss
+++ b/src/styles/_longterm.scss
@@ -16,8 +16,8 @@
   display: flex;
   flex-direction: column;
   color: white;
-  //   background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid black;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid white;
   border-radius: 15px;
 }
 
