--- a/src/styles/_longterm.scss
+++ b/src/styles/_longterm.scss
@@ -1,24 +1,38 @@
 .Longterm {
-  position: absolute;
-  bottom: 200px;
-  left: 50%;
-  transform: translateX(-50%);
-  height: 50px;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
   row-gap: 1rem;
+
   margin: 0 auto;
-  text-align: center;
+
+  @media (min-width: 576px) {
+    grid-template-columns: 1fr 1fr;
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media (min-width: 992px) {
+    grid-template-columns: repeat(5, 1fr);
+  }
+  @media (min-width: 1200px) {
+    grid-template-columns: repeat(10, 1fr);
+  }
 }
 
 .one {
   display: flex;
   flex-direction: column;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  color: black;
+  background-color: lightblue;
   border: 2px solid white;
-  border-radius: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  .info {
+    margin-top: 0.4rem;
+    background-color: white;
+    padding: 0.4rem;
+  }
 }
 
 .img {
@@ -26,7 +40,7 @@
   width: 100px;
 }
 
-.hours {
+.showLongTerm {
   background-color: white;
   border: 2px solid black;
   padding: 1rem;
