--- a/src/styles/_result.scss
+++ b/src/styles/_result.scss
@@ -1,18 +1,24 @@
 .main {
-  font-size: 3rem;
+  font-size: 1.6rem;
 }
 
 .Result {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 80vh;
+  justify-content: space-around;
+}
+
+.city {
   font-family: "Montserrat", sans-serif;
-  display: inline;
   background-color: rgba(0, 0, 0, 0.4);
   color: white;
-  padding: 3rem;
+  padding: 1rem;
   margin: 0 auto;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.2rem;
 }
 
 .result-text {
   margin: 1rem;
-  font-size: 1.6rem;
+  font-size: 1rem;
 }
